# python-spd3303x

./: .travis.yml  98-sgd3303x.rules  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  python-tests.yml
spd3303x/: __init__.py  cli.py
tests/: test_api.py
